welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: not a legal formal parameter
	if ((a<= 40 && a>= 30) && (b<= 40 && b=>30)){return true}
                                          ^in3050:3: error: not a legal formal parameter
	if ((a<= 50 && a>= 40) && (b<= 50 && b=>40)){return true}
                                          ^